--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
             </div>
 
             <input class="checkbox-text" type="checkbox">I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span>
-            <button class="backdrop-btn" type="submit">Sent</button>
+            <button class="backdrop-btn" type="submit">Send</button>
 
             
         </form>
