--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                 </ul>
             </div>
             <div class="footer-form">
-                <label class="user-subscription" for="subscription">Subscribe</label>
+                <p class="subscribe-text">Subscribe</p>
             
                 <input class="subscribe-email" type="email" id="subscription" placeholder="E-mail" required>
                 <button class="subscribe-btn" type="submit">Subscribe
