--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 <form class="contact-email">
 
                      <label class="footer-label" for="subscription">
-                        
+
                          <input class="subscribe-email" type="email" id="subscription" placeholder="E-mail" name="footer-email" required>
                     </label>
                      <button class="subscribe-btn" type="submit">Subscribe
@@ -710,7 +710,7 @@
 
      <div class="backdrop is-open">
         <form class="backdrop-box">
-            <button class="close-btn">
+            <button class="close-btn" type="button">
                 <svg class="close-btn-icon" width="8" height="8" aria-label="close button">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
