--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                      <label class="user-name-wrapper" for="user-name">Name</label>
                      <div class="box">
                          <input class="user-info" type="text" name="user-name" id="user-name" required>
-                              <svg class="backdrop-icons" width="18" height="18" aria-label="user name">
+                              <svg class="backdrop-icons" width="18" height="24" aria-label="user name">
                                 <use href="./images/icons.svg#icon-Vector">
                                  </use>
                              </svg>
@@ -767,7 +767,7 @@
                 <div class="checkbox">
 
                      <input class="checkbox-text" type="checkbox"  id="user-privacy"  value="true" name="user-privacy" >
-                 <label class="privacy-policy-link" href="">I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span>for="user-privacy"</label>
+                 <label class="privacy-policy-link" for="user-privacy" href="">I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span></label>
                  <button class="backdrop-btn" type="submit">Send</button>
                 </div>
             </form>
