--- a/index.html
+++ b/index.html
@@ -767,7 +767,11 @@
                 <div class="checkbox">
 
                      <input class="checkbox-text visually-hidden" type="checkbox"  id="user-privacy"  value="true" name="user-privacy" >
-                 <label class="privacy-policy-link" for="user-privacy" >I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span></label>
+                 <label class="privacy-policy-link" for="user-privacy" >I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span>
+                     <svg class="icon-link" width="10" height="8"> 
+                    <use href="./images/icons.svg#icon-subscribe"></use>
+                     </svg>
+                 </label>
                  <button class="backdrop-btn" type="submit">Send</button>
                 </div>
             </form>
