--- a/index.html
+++ b/index.html
@@ -768,14 +768,14 @@
 
                      <input class="checkbox-text visually-hidden" type="checkbox"  id="user-privacy"  value="true" name="user-privacy" >
                      <label class="privacy-policy-link" for="user-privacy">
-                         <span class="checkbox-agree">I accept the terms and conditions of the <span class="other-style-text">Privacy Policy</span>
+                         <span class="checkbox-agree">I accept the terms and conditions of the <a class="other-style-text">Privacy Policy</a>
                              <svg class="icon-link" width="10" height="8"> 
                                   <use href="./images/icons.svg#icon-subscribe"></use>
                              </svg>
                          </span>
-                 </label>
-                 <button class="backdrop-btn" type="submit">Send</button>
+                     </label>
                 </div>
+                <button class="backdrop-btn" type="submit">Send</button>
             </form>
         
             
