--- a/index.html
+++ b/index.html
@@ -767,12 +767,15 @@
                 <div class="checkbox">
 
                      <input class="checkbox-text visually-hidden" type="checkbox" id="user-privacy" value="true" name="user-privacy">
-                     <label class="privacy-policy-link" for="user-privacy">I accept the terms and conditions of the<a class="other-style-text">Privacy Policy</a>
-                         <span class="checkbox-agree"> 
-                             <svg class="icon-link" width="10" height="8"> 
-                             <use href="./images/icons.svg#icon-subscribe"></use>
-                             </svg>
-                         </span>
+                     <label class="privacy-policy-link" for="user-privacy">
+                        <span class="checkbox-agree">
+                            <svg class="icon-link" width="10" height="8">
+                                <use href="./images/icons.svg#icon-subscribe"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the
+                        <a href="" class="other-style-text">Privacy Policy</a>
+                        
                      </label>
                 </div>
                 <button class="backdrop-btn" type="submit">Send</button>
