--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                      <label class="privacy-policy-link" for="user-privacy">
                         <span class="checkbox-agree">
                             <svg class="icon-link" width="10" height="8">
-                                <use href="./images/icons.svg#icon-subscribe"></use>
+                                <use href="./images/icons.svg#icon-ok"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the
